ZipClass 读取ZIP文件内权限信息